--- a/hw7/q4.ipynb
+++ b/hw7/q4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "image_path = './image.png'\n",
     "image = Image.open(image_path).convert(\"HSV\")\n",
     "image_array = np.array(image)\n",
-    "original_shape = image_array.shape\n",
+    "original_shape = image_array.shapes\n",
     "\n",
     "# Reshape the image array to a 2D array where each row is a pixel (R, G, B)\n",
     "pixels = image_array.reshape(-1, 3)"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
